chore: native image bundle support